syntax = "proto2";

package protobuf.event;

message PBEventMetadata {
    required uint32 length = 1;
    required PBEventMessageType type = 2;
}

enum PBEventMessageType {
    PBGameEntityState = 0;
    PBPlayerMessage = 1;
}
